create a popup layout

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Der Vorleser",
+    "name": "Vorleser",
     "version": "1.0.0",
     "manifest_version": 2,
     "description": "Ausgewählte Textstelle vorlesen",
